welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: value m is not a member of Unit
possible cause: maybe a semicolon is missing before `value m'?
    } m=m+1
      ^