welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T = new Array [Int](num)
  var m: Int = 1
  T(0)=1
  for (i <- 1 to num-1) {
    for (j <- 0 to m) {
      T(j)=m
    } m=m+1
  }
  return T(num-1)
}